<?xml version="1.0"?>
<package format="2">
  <name>wall_follower</name>
  <version>1.0.0</version>
  <description>The wall_follower package for Udacity Robotics Nanodegree </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="sebas.a.castro@gmail.com">Sebastian Castro</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <!-- The *depend tags are used to specify dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <!-- Dependencies can be catkin packages or system dependencies -->
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <!-- Use build_depend for packages you need at compile time: -->
  <build_depend>message_generation</build_depend>
  <!-- Use exec_depend for packages you need at runtime: -->
  <exec_depend>message_runtime</exec_depend>
 

</package>
